Fix right padding issue

--- a/frontend/src/pages/home.html
+++ b/frontend/src/pages/home.html
@@ -3,7 +3,7 @@
         <div class="navbar-inner sliding">
             <div class="title">Home</div>
             <div class="right">
-                <a href="#" class="panel-open mobilemenubutton rightpadfix" data-panel="panel-left">
+                <a href="#" class="panel-open mobilemenubutton rightpaddingfix" data-panel="panel-left">
                     <i class="fa fa-bars"></i>
                 </a>
             </div>
