start setting up gmaps

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -10,7 +10,6 @@
     <!-- Theme Color -->
     <meta name="theme-color" content="#2196f3">
     <title>InnovateIT2019</title>
-    <link rel="manifest" href="manifest.json">
     <!-- Meta Description -->
     <meta name="description" content="">
     <meta name="keywords" content="">
@@ -67,6 +66,7 @@
     <script type="text/javascript" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/MorphSVGPlugin.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/EaselJS/0.8.0/easeljs.min.js"></script>
     <script type="text/javascript" src="lib/framework7/framework7.bundle.min.js"></script>
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCaxvUQcVHdlK9wmx6W9NjDUoHuTDUO2w0"></script>
     <script type="text/javascript" src="lib/libs.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
 </body>
