--- a/frontend/src/pages/home.html
+++ b/frontend/src/pages/home.html
@@ -10,6 +10,6 @@
         </div>
     </div>
     <div class="page-content">
-        <p>hello world</p>
+        <div id="gmap"></div>
     </div>
 </div>
