--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -14,27 +14,15 @@
     <meta name="description" content="">
     <meta name="keywords" content="">
     <!-- Facebook -->
-    <meta property="og:title" content="DrinkUP!" />
+    <meta property="og:title" content="InnovateIT2019" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="" />
     <meta property="og:url" content="" />
     <meta property="og:description" content="" />
-    <!-- Favicon -->
-    <link rel="icon" type="image/png" href="img/icon/favicon-96x96.png" sizes="96x96">
-    <link rel="icon" type="image/png" href="img/icon/favicon-32x32.png" sizes="32x32">
-    <link rel="icon" type="image/png" href="img/icon/favicon-16x16.png" sizes="16x16">
+
     <!-- Internet Explorer Pin -->
     <meta name="msapplication-TileColor" content="#607d8b">
-    <meta name="msapplication-TileImage" content="img/icon/mstile-144x144.png">
-    <!-- Apple Touch Icon -->
-    <link rel="apple-touch-icon" sizes="152x152" href="img/icon/apple-touch-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="img/icon/apple-touch-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="img/icon/apple-touch-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="img/icon/apple-touch-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="img/icon/apple-touch-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="img/icon/apple-touch-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="img/icon/apple-touch-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="57x57" href="img/icon/apple-touch-icon-57x57.png">
+
     <!-- ====== -->
     <link rel="stylesheet" href="css/framework7.bundle.min.css">
     <link rel="stylesheet" href="css/app.css">
@@ -67,6 +55,7 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/EaselJS/0.8.0/easeljs.min.js"></script>
     <script type="text/javascript" src="lib/framework7/framework7.bundle.min.js"></script>
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCaxvUQcVHdlK9wmx6W9NjDUoHuTDUO2w0"></script>
+    <script type="text/javascript" src="lib/gmaps/gmaps.js"></script>
     <script type="text/javascript" src="lib/libs.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
 </body>
