Geocode zipcode, styling fix

--- a/frontend/src/pages/home.html
+++ b/frontend/src/pages/home.html
@@ -156,7 +156,7 @@
         <div class="list">
             <ul>
                 <li class="item-content item-input">
-                    <div class="item-media"><i class="fa fa-street-view"></i></div>
+                    <div class="item-media"><i class="fa fa-street-view fa-lg" style="padding-bottom: 9px;"></i></div>
                     <div class="item-inner">
                         <!-- "item-floating-label" class on item title -->
                         <div class="item-title item-floating-label">Zipcode</div>
