About page, begin working on lcoation info

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -9,12 +9,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0">
     <!-- Theme Color -->
     <meta name="theme-color" content="#2196f3">
-    <title>InnovateIT2019</title>
+    <title>EnerGeo</title>
     <!-- Meta Description -->
     <meta name="description" content="">
     <meta name="keywords" content="">
     <!-- Facebook -->
-    <meta property="og:title" content="InnovateIT2019" />
+    <meta property="og:title" content="EnerGeo" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="" />
     <meta property="og:url" content="" />
@@ -43,6 +43,20 @@
         <!-- Your main view, should have "view-main" class -->
         <div class="view view-main">
         </div>
+        <div class="sheet-modal location-sheet">
+            <div class="toolbar">
+              <div class="toolbar-inner">
+                <div class="left"></div>
+                <div class="right"><a class="link sheet-close" href="#">Done</a></div>
+              </div>
+            </div>
+            <div class="sheet-modal-inner">
+              <div class="block">
+                <h4>Info</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque ac diam ac quam euismod porta vel a nunc. Quisque sodales scelerisque est, at porta justo cursus ac.</p>
+              </div>
+            </div>
+          </div>
     </div>
     <script type="text/javascript" src="https://www.gstatic.com/firebasejs/5.8.0/firebase-app.js"></script>
     <script type="text/javascript" src="https://www.gstatic.com/firebasejs/5.8.0/firebase-auth.js"></script>
