--- a/frontend/src/pages/home.html
+++ b/frontend/src/pages/home.html
@@ -171,7 +171,7 @@
                 <a class="button button-round button-large color-green button-fill" onclick="javascript:checkLocation();">Check</a>
             </center>
         </div>
-        <div id="umap" style="width: 100%; height: 100%;"></div>
+        <div id="umap" style="width: 100%; height: 100vh;"></div>
 
     </div>
 </div>
