about logo, begin working on gluing together with backend

--- a/frontend/src/pages/about.html
+++ b/frontend/src/pages/about.html
@@ -15,7 +15,9 @@
         </div>
     </div>
     <div class="page-content">
-        <!-- TODO: Logo -->
+        <center>
+            <img src="img/EnerGeoLogo.svg" height="196" width="196" alt="EnerGeo Logo">
+        </center>
         <center>
             <h1>EnerGeo</h1>
         </center>
