--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -74,4 +74,156 @@
     <script type="text/javascript" src="js/app.js"></script>
 </body>
 
+</html><!DOCTYPE html>
+<html>
+
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, minimal-ui">
+    <meta http-equiv="Content-Security-Policy" content="img-src * 'self' data:; default-src * gap: wss: ws: file: data: blob: filesystem: ; style-src 'self' 'unsafe-inline'; script-src * 'unsafe-inline' 'unsafe-eval';">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0">
+    <!-- Theme Color -->
+    <meta name="theme-color" content="#2196f3">
+    <title>EnerGeo</title>
+    <!-- Meta Description -->
+    <meta name="description" content="">
+    <meta name="keywords" content="">
+    <!-- Facebook -->
+    <meta property="og:title" content="EnerGeo" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="" />
+    <meta property="og:url" content="" />
+    <meta property="og:description" content="" />
+
+    <!-- Internet Explorer Pin -->
+    <meta name="msapplication-TileColor" content="#607d8b">
+
+    <!-- ====== -->
+    <link rel="stylesheet" href="css/framework7.bundle.min.css">
+    <link rel="stylesheet" href="css/app.css">
+    <link rel="stylesheet" href="lib/libs.css">
+</head>
+
+<body>
+    <div id="app">
+        <!-- Statusbar overlay -->
+        <div class="statusbar"></div>
+
+        <div class="panel panel-left panel-cover">
+            <div class="view view-left">
+
+            </div>
+        </div>
+
+        <!-- Your main view, should have "view-main" class -->
+        <div class="view view-main">
+        </div>
+        <div class="sheet-modal location-sheet">
+            <div class="toolbar">
+              <div class="toolbar-inner">
+                <div class="left"></div>
+                <div class="right"><a class="link sheet-close" href="#">Done</a></div>
+              </div>
+            </div>
+            <div class="sheet-modal-inner">
+              <div class="block">
+                <h4>Info</h4>
+                
+              </div>
+            </div>
+          </div>
+    </div>
+    <script type="text/javascript" src="https://www.gstatic.com/firebasejs/5.8.0/firebase-app.js"></script>
+    <script type="text/javascript" src="https://www.gstatic.com/firebasejs/5.8.0/firebase-auth.js"></script>
+    <script type="text/javascript" src="https://www.gstatic.com/firebasejs/5.8.0/firebase-firestore.js"></script>
+    <script type="text/javascript" src="https://www.gstatic.com/firebasejs/5.8.0/firebase-messaging.js"></script>
+    <script type="text/javascript" src="https://www.gstatic.com/firebasejs/5.8.0/firebase-functions.js"></script>
+    <script type="text/javascript" src="https://www.gstatic.com/firebasejs/5.8.0/firebase-storage.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.3/TweenMax.min.js"></script>
+    <script type="text/javascript" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/MorphSVGPlugin.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/EaselJS/0.8.0/easeljs.min.js"></script>
+    <script type="text/javascript" src="lib/framework7/framework7.bundle.min.js"></script>
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCaxvUQcVHdlK9wmx6W9NjDUoHuTDUO2w0"></script>
+    <script type="text/javascript" src="lib/gmaps/gmaps.js"></script>
+    <script type="text/javascript" src="lib/libs.js"></script>
+    <script type="text/javascript" src="js/app.js"></script>
+</body>
+
+</html><!DOCTYPE html>
+<html>
+
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, minimal-ui">
+    <meta http-equiv="Content-Security-Policy" content="img-src * 'self' data:; default-src * gap: wss: ws: file: data: blob: filesystem: ; style-src 'self' 'unsafe-inline'; script-src * 'unsafe-inline' 'unsafe-eval';">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0">
+    <!-- Theme Color -->
+    <meta name="theme-color" content="#2196f3">
+    <title>EnerGeo</title>
+    <!-- Meta Description -->
+    <meta name="description" content="">
+    <meta name="keywords" content="">
+    <!-- Facebook -->
+    <meta property="og:title" content="EnerGeo" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="" />
+    <meta property="og:url" content="" />
+    <meta property="og:description" content="" />
+
+    <!-- Internet Explorer Pin -->
+    <meta name="msapplication-TileColor" content="#607d8b">
+
+    <!-- ====== -->
+    <link rel="stylesheet" href="css/framework7.bundle.min.css">
+    <link rel="stylesheet" href="css/app.css">
+    <link rel="stylesheet" href="lib/libs.css">
+</head>
+
+<body>
+    <div id="app">
+        <!-- Statusbar overlay -->
+        <div class="statusbar"></div>
+
+        <div class="panel panel-left panel-cover">
+            <div class="view view-left">
+
+            </div>
+        </div>
+
+        <!-- Your main view, should have "view-main" class -->
+        <div class="view view-main">
+        </div>
+        <div class="sheet-modal location-sheet">
+            <div class="toolbar">
+              <div class="toolbar-inner">
+                <div class="left"></div>
+                <div class="right"><a class="link sheet-close" href="#">Done</a></div>
+              </div>
+            </div>
+            <div class="sheet-modal-inner">
+              <div class="block">
+                <h4>Info</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque ac diam ac quam euismod porta vel a nunc. Quisque sodales scelerisque est, at porta justo cursus ac.</p>
+              </div>
+            </div>
+          </div>
+    </div>
+    <script type="text/javascript" src="https://www.gstatic.com/firebasejs/5.8.0/firebase-app.js"></script>
+    <script type="text/javascript" src="https://www.gstatic.com/firebasejs/5.8.0/firebase-auth.js"></script>
+    <script type="text/javascript" src="https://www.gstatic.com/firebasejs/5.8.0/firebase-firestore.js"></script>
+    <script type="text/javascript" src="https://www.gstatic.com/firebasejs/5.8.0/firebase-messaging.js"></script>
+    <script type="text/javascript" src="https://www.gstatic.com/firebasejs/5.8.0/firebase-functions.js"></script>
+    <script type="text/javascript" src="https://www.gstatic.com/firebasejs/5.8.0/firebase-storage.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.3/TweenMax.min.js"></script>
+    <script type="text/javascript" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/MorphSVGPlugin.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/EaselJS/0.8.0/easeljs.min.js"></script>
+    <script type="text/javascript" src="lib/framework7/framework7.bundle.min.js"></script>
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCaxvUQcVHdlK9wmx6W9NjDUoHuTDUO2w0"></script>
+    <script type="text/javascript" src="lib/gmaps/gmaps.js"></script>
+    <script type="text/javascript" src="lib/libs.js"></script>
+    <script type="text/javascript" src="js/app.js"></script>
+</body>
+
 </html>
