--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -45,7 +45,7 @@
     <!-- Your main view, should have "view-main" class -->
     <div class="view view-main">
     </div>
-    <div class="sheet-modal location-sheet">
+    <div class="sheet-modal location-sheet" style="height: 500px;">
       <div class="toolbar">
         <div class="toolbar-inner">
           <div class="left"></div>
@@ -55,7 +55,7 @@
       <div class="sheet-modal-inner">
         <div class="block">
           <h4>Info</h4>
-
+          <div class="scoregauge"></div>
         </div>
       </div>
     </div>
