--- a/frontend/src/pages/home.html
+++ b/frontend/src/pages/home.html
@@ -174,6 +174,7 @@
             </center>
         </div>
         <img src="img/map.svg" alt="Hello!" class="backgroundsvg mapbgimg">
+        <center><a class="button button-fill button-small color-blue viewinfobtn" onclick="javascript:app.sheet.open('.location-sheet');" style="width: 150px;">View Info</a></center>
         <div id="umap" style="width: 100%; height: 100vh;"></div>
     </div>
 </div>
