Change home title

--- a/frontend/src/pages/home.html
+++ b/frontend/src/pages/home.html
@@ -1,7 +1,7 @@
 <div class="page" data-name="home">
     <div class="navbar">
         <div class="navbar-inner sliding">
-            <div class="title">Home</div>
+            <div class="title">Check Location</div>
             <div class="right">
                 <a href="#" class="panel-open mobilemenubutton rightpaddingfix" data-panel="panel-left">
                     <i class="fa fa-bars"></i>
