Work on results

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -55,7 +55,7 @@
       <div class="sheet-modal-inner">
         <div class="block">
           <h4>Info</h4>
-          <div class="scoregauge"></div>
+          <center><div class="scoregauge"></div></center>
         </div>
       </div>
     </div>
