--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -55,27 +55,48 @@
       <div class="sheet-modal-inner">
         <div class="block">
           <h4>Info</h4>
-          <center><div class="scoregauge"></div></center>
+          <center>
+            <div class="scoregauge"></div>
+          </center>
         </div>
       </div>
     </div>
-  </div>
-  <script type="text/javascript" src="https://www.gstatic.com/firebasejs/5.8.0/firebase-app.js"></script>
-  <script type="text/javascript" src="https://www.gstatic.com/firebasejs/5.8.0/firebase-auth.js"></script>
-  <script type="text/javascript" src="https://www.gstatic.com/firebasejs/5.8.0/firebase-firestore.js"></script>
-  <script type="text/javascript" src="https://www.gstatic.com/firebasejs/5.8.0/firebase-messaging.js"></script>
-  <script type="text/javascript" src="https://www.gstatic.com/firebasejs/5.8.0/firebase-functions.js"></script>
-  <script type="text/javascript" src="https://www.gstatic.com/firebasejs/5.8.0/firebase-storage.js"></script>
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.3/TweenMax.min.js"></script>
-  <script type="text/javascript" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/MorphSVGPlugin.min.js">
-  </script>
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/EaselJS/0.8.0/easeljs.min.js"></script>
-  <script type="text/javascript" src="lib/framework7/framework7.bundle.min.js"></script>
-  <script type="text/javascript"
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCaxvUQcVHdlK9wmx6W9NjDUoHuTDUO2w0"></script>
-  <script type="text/javascript" src="lib/gmaps/gmaps.js"></script>
-  <script type="text/javascript" src="lib/libs.js"></script>
-  <script type="text/javascript" src="js/app.js"></script>
+    <div class="popup popup-results">
+      <div class="view">
+        <div class="page">
+          <div class="navbar">
+            <div class="navbar-inner">
+              <div class="title">Results</div>
+              <div class="right">
+                <!-- Link to close popup -->
+                <a class="link popup-close">Close</a>
+              </div>
+            </div>
+          </div>
+          <div class="page-content">
+            <center><img src="img/wind.svg" height="300px" width="70%" class="results_wind"></center>
+            <center><img src="img/solar.svg" height="300px" width="70%" class="results_solar"></center>
+            <center><h2 class="results_title"></h2></center>
+          </div>
+        </div>
+      </div>
+    </div>
+    <script type="text/javascript" src="https://www.gstatic.com/firebasejs/5.8.0/firebase-app.js"></script>
+    <script type="text/javascript" src="https://www.gstatic.com/firebasejs/5.8.0/firebase-auth.js"></script>
+    <script type="text/javascript" src="https://www.gstatic.com/firebasejs/5.8.0/firebase-firestore.js"></script>
+    <script type="text/javascript" src="https://www.gstatic.com/firebasejs/5.8.0/firebase-messaging.js"></script>
+    <script type="text/javascript" src="https://www.gstatic.com/firebasejs/5.8.0/firebase-functions.js"></script>
+    <script type="text/javascript" src="https://www.gstatic.com/firebasejs/5.8.0/firebase-storage.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.3/TweenMax.min.js"></script>
+    <script type="text/javascript" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/MorphSVGPlugin.min.js">
+    </script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/EaselJS/0.8.0/easeljs.min.js"></script>
+    <script type="text/javascript" src="lib/framework7/framework7.bundle.min.js"></script>
+    <script type="text/javascript"
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCaxvUQcVHdlK9wmx6W9NjDUoHuTDUO2w0"></script>
+    <script type="text/javascript" src="lib/gmaps/gmaps.js"></script>
+    <script type="text/javascript" src="lib/libs.js"></script>
+    <script type="text/javascript" src="js/app.js"></script>
 </body>
 
 </html>
