Work on results

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -54,10 +54,12 @@
       </div>
       <div class="sheet-modal-inner">
         <div class="block">
-          <h4>Info</h4>
+          <h4>Results</h4>
           <center>
-            <div class="scoregauge"></div>
+            <div class="windgauge"></div>
+            <div class="solargauge"></div>
           </center>
+          <center><h3 class="location_best"></h3></center>
         </div>
       </div>
     </div>
@@ -74,8 +76,8 @@
             </div>
           </div>
           <div class="page-content">
-            <center><img src="img/wind.svg" height="300px" width="70%" class="results_wind"></center>
-            <center><img src="img/solar.svg" height="300px" width="70%" class="results_solar"></center>
+            <center><img src="img/wind.svg" height="300px" width="70%" class="results_wind_img"></center>
+            <center><img src="img/solar.svg" height="300px" width="70%" class="results_solar_img"></center>
             <center><h2 class="results_title"></h2></center>
           </div>
         </div>
