--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -60,6 +60,11 @@
             <div class="solargauge"></div>
           </center>
           <center><h3 class="location_best"></h3></center>
+          <p class="savings_current"></p>
+          <div class="block-title">Wind</div>
+          <p class="savings_wind"></p>
+          <div class="block-title">Solar</div>
+          <p class="savings_solar"></p>
         </div>
       </div>
     </div>
