--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -45,7 +45,7 @@
     <!-- Your main view, should have "view-main" class -->
     <div class="view view-main">
     </div>
-    <div class="sheet-modal location-sheet" style="height: 500px;">
+    <div class="sheet-modal location-sheet" style="height: 700px;">
       <div class="toolbar">
         <div class="toolbar-inner">
           <div class="left"></div>
@@ -59,7 +59,9 @@
             <div class="windgauge"></div>
             <div class="solargauge"></div>
           </center>
-          <center><h3 class="location_best"></h3></center>
+          <center>
+            <h3 class="location_best"></h3>
+          </center>
           <p class="savings_current"></p>
           <div class="block-title">Wind</div>
           <p class="savings_wind"></p>
@@ -83,7 +85,9 @@
           <div class="page-content">
             <center><img src="img/wind.svg" height="300px" width="70%" class="results_wind_img"></center>
             <center><img src="img/solar.svg" height="300px" width="70%" class="results_solar_img"></center>
-            <center><h2 class="results_title"></h2></center>
+            <center>
+              <h2 class="results_title"></h2>
+            </center>
           </div>
         </div>
       </div>
@@ -104,6 +108,12 @@
     <script type="text/javascript" src="lib/gmaps/gmaps.js"></script>
     <script type="text/javascript" src="lib/libs.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
+</body>
+
+</html>
+<script type="text/javascript" src="lib/gmaps/gmaps.js"></script>
+<script type="text/javascript" src="lib/libs.js"></script>
+<script type="text/javascript" src="js/app.js"></script>
 </body>
 
 </html>
