--- a/frontend/firebase/public/index.html
+++ b/frontend/firebase/public/index.html
@@ -1,65 +1,119 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Welcome to Firebase Hosting</title>
 
-    <!-- update the version number as needed -->
-    <script defer src="/__/firebase/5.9.2/firebase-app.js"></script>
-    <!-- include only the Firebase features as you need -->
-    <script defer src="/__/firebase/5.9.2/firebase-auth.js"></script>
-    <script defer src="/__/firebase/5.9.2/firebase-database.js"></script>
-    <script defer src="/__/firebase/5.9.2/firebase-messaging.js"></script>
-    <script defer src="/__/firebase/5.9.2/firebase-storage.js"></script>
-    <!-- initialize the SDK after all desired features are loaded -->
-    <script defer src="/__/firebase/init.js"></script>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport"
+    content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, minimal-ui">
+  <meta http-equiv="Content-Security-Policy"
+    content="img-src * 'self' data:; default-src * gap: wss: ws: file: data: blob: filesystem: ; style-src 'self' 'unsafe-inline'; script-src * 'unsafe-inline' 'unsafe-eval';">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0">
+  <!-- Theme Color -->
+  <meta name="theme-color" content="#2196f3">
+  <title>EnerGeo</title>
+  <!-- Meta Description -->
+  <meta name="description" content="">
+  <meta name="keywords" content="">
+  <!-- Facebook -->
+  <meta property="og:title" content="EnerGeo" />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="" />
+  <meta property="og:url" content="" />
+  <meta property="og:description" content="" />
 
-    <style media="screen">
-      body { background: #ECEFF1; color: rgba(0,0,0,0.87); font-family: Roboto, Helvetica, Arial, sans-serif; margin: 0; padding: 0; }
-      #message { background: white; max-width: 360px; margin: 100px auto 16px; padding: 32px 24px; border-radius: 3px; }
-      #message h2 { color: #ffa100; font-weight: bold; font-size: 16px; margin: 0 0 8px; }
-      #message h1 { font-size: 22px; font-weight: 300; color: rgba(0,0,0,0.6); margin: 0 0 16px;}
-      #message p { line-height: 140%; margin: 16px 0 24px; font-size: 14px; }
-      #message a { display: block; text-align: center; background: #039be5; text-transform: uppercase; text-decoration: none; color: white; padding: 16px; border-radius: 4px; }
-      #message, #message a { box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24); }
-      #load { color: rgba(0,0,0,0.4); text-align: center; font-size: 13px; }
-      @media (max-width: 600px) {
-        body, #message { margin-top: 0; background: white; box-shadow: none; }
-        body { border-top: 16px solid #ffa100; }
-      }
-    </style>
-  </head>
-  <body>
-    <div id="message">
-      <h2>Welcome</h2>
-      <h1>Firebase Hosting Setup Complete</h1>
-      <p>You're seeing this because you've successfully setup Firebase Hosting. Now it's time to go build something extraordinary!</p>
-      <a target="_blank" href="https://firebase.google.com/docs/hosting/">Open Hosting Documentation</a>
+  <!-- Internet Explorer Pin -->
+  <meta name="msapplication-TileColor" content="#607d8b">
+
+  <!-- ====== -->
+  <link rel="stylesheet" href="css/framework7.bundle.min.css">
+  <link rel="stylesheet" href="css/app.css">
+  <link rel="stylesheet" href="lib/libs.css">
+</head>
+
+<body>
+  <div id="app">
+    <!-- Statusbar overlay -->
+    <div class="statusbar"></div>
+
+    <div class="panel panel-left panel-cover">
+      <div class="view view-left">
+
+      </div>
     </div>
-    <p id="load">Firebase SDK Loading&hellip;</p>
 
-    <script>
-      document.addEventListener('DOMContentLoaded', function() {
-        // // 🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥
-        // // The Firebase SDK is initialized and available here!
-        //
-        // firebase.auth().onAuthStateChanged(user => { });
-        // firebase.database().ref('/path/to/ref').on('value', snapshot => { });
-        // firebase.messaging().requestPermission().then(() => { });
-        // firebase.storage().ref('/path/to/ref').getDownloadURL().then(() => { });
-        //
-        // // 🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥
-
-        try {
-          let app = firebase.app();
-          let features = ['auth', 'database', 'messaging', 'storage'].filter(feature => typeof app[feature] === 'function');
-          document.getElementById('load').innerHTML = `Firebase SDK loaded with ${features.join(', ')}`;
-        } catch (e) {
-          console.error(e);
-          document.getElementById('load').innerHTML = 'Error loading the Firebase SDK, check the console.';
-        }
-      });
+    <!-- Your main view, should have "view-main" class -->
+    <div class="view view-main">
+    </div>
+    <div class="sheet-modal location-sheet" style="height: 700px;">
+      <div class="toolbar">
+        <div class="toolbar-inner">
+          <div class="left"></div>
+          <div class="right"><a class="link sheet-close" href="#">Done</a></div>
+        </div>
+      </div>
+      <div class="sheet-modal-inner">
+        <div class="block">
+          <h4>Results</h4>
+          <center>
+            <div class="windgauge"></div>
+            <div class="solargauge"></div>
+          </center>
+          <center>
+            <h3 class="location_best"></h3>
+          </center>
+          <p class="savings_current"></p>
+          <div class="block-title">Wind</div>
+          <p class="savings_wind"></p>
+          <div class="block-title">Solar</div>
+          <p class="savings_solar"></p>
+        </div>
+      </div>
+    </div>
+    <div class="popup popup-results">
+      <div class="view">
+        <div class="page">
+          <div class="navbar">
+            <div class="navbar-inner">
+              <div class="title">Results</div>
+              <div class="right">
+                <!-- Link to close popup -->
+                <a class="link popup-close">Close</a>
+              </div>
+            </div>
+          </div>
+          <div class="page-content">
+            <center><img src="img/wind.svg" height="300px" width="70%" class="results_wind_img"></center>
+            <center><img src="img/solar.svg" height="300px" width="70%" class="results_solar_img"></center>
+            <center>
+              <h2 class="results_title"></h2>
+            </center>
+          </div>
+        </div>
+      </div>
+    </div>
+    <script type="text/javascript" src="https://www.gstatic.com/firebasejs/5.8.0/firebase-app.js"></script>
+    <script type="text/javascript" src="https://www.gstatic.com/firebasejs/5.8.0/firebase-auth.js"></script>
+    <script type="text/javascript" src="https://www.gstatic.com/firebasejs/5.8.0/firebase-firestore.js"></script>
+    <script type="text/javascript" src="https://www.gstatic.com/firebasejs/5.8.0/firebase-messaging.js"></script>
+    <script type="text/javascript" src="https://www.gstatic.com/firebasejs/5.8.0/firebase-functions.js"></script>
+    <script type="text/javascript" src="https://www.gstatic.com/firebasejs/5.8.0/firebase-storage.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.3/TweenMax.min.js"></script>
+    <script type="text/javascript" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/MorphSVGPlugin.min.js">
     </script>
-  </body>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/EaselJS/0.8.0/easeljs.min.js"></script>
+    <script type="text/javascript" src="lib/framework7/framework7.bundle.min.js"></script>
+    <script type="text/javascript"
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCaxvUQcVHdlK9wmx6W9NjDUoHuTDUO2w0"></script>
+    <script type="text/javascript" src="lib/gmaps/gmaps.js"></script>
+    <script type="text/javascript" src="lib/libs.js"></script>
+    <script type="text/javascript" src="js/app.js"></script>
+</body>
+
+</html>
+<script type="text/javascript" src="lib/gmaps/gmaps.js"></script>
+<script type="text/javascript" src="lib/libs.js"></script>
+<script type="text/javascript" src="js/app.js"></script>
+</body>
+
 </html>
